<resources>
    <string name="app_name" translatable="false">Simple Cashier\'s Calculator</string>
    <string name="direction_up">Move Up</string>
    <string name="direction_down">Move Down</string>
    <string name="price">Price</string>
    <string name="move">Move</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="instruction">"Product name already exists."</string>
    <string name="instrution_empty">Please open settings to add a product.</string>
    <string name="add_product">Add Product</string>
    <string name="clear">Clear</string>
    <string name="new_product">New Product</string>
    <string name="apply">Apply</string>
    <string name="edit_product_info">Edit Product Info</string>
    <string name="grid_collumns">Grid Collumns</string>
    <string name="grid_rows">Grid Rows</string>
    <string name="currency">Currency</string>
    <string name="not_empty">Title can not be empty.</string>
    <string name="grid_full">Not enough space, delete products or change the grid-size</string>
    <string name="grid_to_small">Too many products for this grid size.</string>
    <string name="delete_all_products">Delete All Products</string>
    <string name="seperator_error">Title must not contain &lt;;&gt;</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="are_aou_sure_delete">Are you sure to delete all products?</string>
    <string name="error_loading">Error loading config</string>
    <string name="enter_code">enter code</string>
    <string name="config_instruction">Enter code to load configuration.</string>
    <string name="export_as_text">Export as text</string>
    <string name="export_title" translatable="false">Simple Cashier\'s Calculator Export</string>
    <string name="copy_to_clipboard">Copy To Clipboard</string>
    <string name="share_code">Share code</string>
    <string name="generate_qr_code">Generate QR-Code</string>
    <string name="instruction_export">Code successfully generated. You can enter this code on any device to load this configuration. How do you like to share the code?</string>
    <string name="done">Done</string>
    <string name="export_config">Export Configuration</string>
    <string name="import_config">Import Configuration</string>
    <string name="import_button">Import</string>
    <string name="cancel">Cancel</string>
    <string name="not_implemented">not yet implemented</string>
    <string name="enter_currency">Enter Currency</string>
</resources>